[gd_scene load_steps=7 format=3 uid="uid://bx4p0gch8bjpi"]

[ext_resource type="Script" uid="uid://bqcvnsre8hvi1" path="res://Scripts/General Scripts/Pause_Menu.gd" id="1_dedpp"]
[ext_resource type="Texture2D" uid="uid://677kosehmut1" path="res://Used Assets/Space Shooter Assets/PNG/Pause/Window.png" id="2_tfqly"]
[ext_resource type="Theme" uid="uid://cxj4g1d5vhtru" path="res://Used Assets/Base_Theme.tres" id="3_lmt1h"]
[ext_resource type="AudioStream" uid="uid://t7e3d16d7q33" path="res://Used Assets/Start_Music.ogg" id="4_7fu8h"]
[ext_resource type="AudioStream" uid="uid://cmribi0lsiuft" path="res://Used Assets/Button_Click.ogg" id="5_uxwvl"]
[ext_resource type="AudioStream" uid="uid://cvgxu0lgtedl8" path="res://Used Assets/Game_Start_Button.ogg" id="6_xqbga"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dedpp")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_tfqly")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -123.0
offset_right = 381.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lmt1h")
theme_override_font_sizes/font_size = 40
text = "Resume

"

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lmt1h")
theme_override_font_sizes/font_size = 40
text = "Save

"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lmt1h")
theme_override_font_sizes/font_size = 40
text = "Quit

"

[node name="Sound_Effects" type="Node2D" parent="."]
position = Vector2(-187, -1148)

[node name="StartMusic" type="AudioStreamPlayer2D" parent="Sound_Effects"]
stream = ExtResource("4_7fu8h")
autoplay = true

[node name="Button_Pressed" type="AudioStreamPlayer2D" parent="Sound_Effects"]
stream = ExtResource("5_uxwvl")

[node name="Game_Start" type="AudioStreamPlayer2D" parent="Sound_Effects"]
stream = ExtResource("6_xqbga")
